[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  "/dev",
  "/tests",
  "/src/birdnetlib/models/lite"
]

[project]
name = "birdnetlib"
version = "0.12.1"
authors = [
  { name="Joe Weiss", email="joe.weiss@gmail.com" },
]
description = "A python api for BirdNET-Lite and BirdNET-Analyzer"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "watchdog==2.1.9",
    "pydub==0.25.1",
    "matplotlib>=3.5.3",
    "requests>=2.28.1",
]

[project.urls]
"Source code" = "https://github.com/joeweiss/birdnetlib"
"Issues" = "https://github.com/joeweiss/birdnetlib/issues"
"Documentation" = "https://joeweiss.github.io/birdnetlib/"
